[gd_scene load_steps=18 format=3 uid="uid://nomey8ht6xwd"]

[ext_resource type="Script" path="res://scenes/vehicles/vehicle_3.gd" id="1_lrmky"]
[ext_resource type="Texture2D" uid="uid://b34q38l0hkdqw" path="res://assets/particles/kenney/muzzle_05.png" id="2_b5ade"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b3vot"]
friction = 0.0
absorbent = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h0c43"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_80jr0"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_43ekg"]
angle_min = -90.0
angle_max = 90.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_iwpgy"]
load_path = "res://.godot/imported/muzzle_05.png-d41c9b52abb346bcced8fcce4a8b9ea8.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jhnn2"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.984314, 1, 0.901961, 1)
albedo_texture = SubResource("CompressedTexture2D_iwpgy")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_yxijc"]
material = SubResource("StandardMaterial3D_jhnn2")
size = Vector2(0.5, 0.5)
center_offset = Vector3(0, 0.2, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_il5qp"]
angle_min = -90.0
angle_max = 90.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s4sj8"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.714868, 0.669018, 1)
albedo_texture = ExtResource("2_b5ade")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_5glm5"]
material = SubResource("StandardMaterial3D_s4sj8")
size = Vector2(0.6, 0.6)
center_offset = Vector3(0, 0.25, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_su7a1"]
angle_min = -135.0
angle_max = 45.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ndrdy"]
angle_min = -135.0
angle_max = 45.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7jsrh"]
angle_min = -45.0
angle_max = 135.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_og57c"]
angle_min = -45.0
angle_max = 135.0
direction = Vector3(-1, 1, 0)
flatness = 1.0
initial_velocity_max = 1.0
radial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_tyxqj"]
size = Vector3(0.46, 0.445, 0.265)

[node name="Vehicle3" type="RigidBody3D"]
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_b3vot")
gravity_scale = 0.0
can_sleep = false
max_contacts_reported = 50
contact_monitor = true
script = ExtResource("1_lrmky")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_h0c43")

[node name="StillTurboTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="SmallBoostTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_80jr0")

[node name="DriftParticles" type="Node3D" parent="."]

[node name="CenterCharging" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_43ekg")
draw_pass_1 = SubResource("QuadMesh_yxijc")

[node name="CenterCharged" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_il5qp")
draw_pass_1 = SubResource("QuadMesh_5glm5")

[node name="LeftCharging" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_su7a1")
draw_pass_1 = SubResource("QuadMesh_yxijc")

[node name="LeftCharged" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_ndrdy")
draw_pass_1 = SubResource("QuadMesh_5glm5")

[node name="RightCharging" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_7jsrh")
draw_pass_1 = SubResource("QuadMesh_yxijc")

[node name="RightCharged" type="GPUParticles3D" parent="DriftParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07285, -0.368908, 0)
amount = 6
lifetime = 0.01
randomness = 0.1
collision_base_size = 0.1
visibility_aabb = AABB(-2.60762, -0.866728, -1.44073, 4.16861, 2.57525, 2.88147)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_og57c")
draw_pass_1 = SubResource("QuadMesh_5glm5")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38, 0)
mesh = SubResource("BoxMesh_tyxqj")

[connection signal="timeout" from="StillTurboTimer" to="." method="_on_still_turbo_timer_timeout"]
